# iron-coder

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html  issues.md  python-test.py  rust-toolchain.toml  settings.toml  test-code.rs  todo.txt
.github/workflows/: rust.yml
assets/code-snippets/: REAMDE.md
assets/code-snippets/ws2812-pio/: constructor.rs
assets/fonts/: REAMDE.md
assets/fonts/chintzycpu/: chintzycpu.txt
assets/fonts/platinum-sign/: README.md
assets/fonts/vcr_osd_mono/: README.md
assets/icons/: README.md
assets/icons/pack/: readme.txt
assets/web/: sw.js
boards/Adafruit/FeatherWing_OLED_128x64/: featherwing_oled_128x64.toml
boards/Adafruit/Feather_RP2040/: feather_rp2040.toml
boards/Adafruit/Feather_RP2040/examples/blinky/: .ironcoder.toml  Cargo.toml  README.md
boards/Adafruit/Feather_RP2040/examples/blinky/src/: main.rs
boards/Adafruit/Feather_RP2040/examples/neopixel/: .ironcoder.toml  Cargo.toml
boards/Adafruit/Feather_RP2040/template/src/: main.rs
boards/Adafruit/Feather_nRF52840/: feather_nrf52840.toml
boards/RaspberryPi/Pico/: pico.toml
boards/Sparkfun/MicroMod-ESP32/: micromod_esp32.toml
boards/Sparkfun/MicroMod-Main-Single/: micromod_main_single.toml
docs/Excalidraw/: inspirations.md
iron-coder-boards/Adafruit/FeatherWing_OLED_128x64/: featherwing_oled_128x64.toml
iron-coder-boards/Adafruit/FeatherWing_OLED_128x64/bsp/: Cargo.toml
iron-coder-boards/Adafruit/FeatherWing_OLED_128x64/bsp/src/: lib.rs
iron-coder-boards/Adafruit/FeatherWing_propmaker/: prop-maker.toml
iron-coder-boards/Adafruit/FeatherWing_propmaker/bsp/: Cargo.toml
iron-coder-boards/Adafruit/FeatherWing_propmaker/bsp/src/: lib.rs
iron-coder-boards/Adafruit/Feather_RP2040/: feather_rp2040.toml
iron-coder-boards/Adafruit/Feather_RP2040/bsp/: Cargo.toml
iron-coder-boards/Adafruit/Feather_RP2040/bsp/src/: lib.rs  prelude.rs  usb_manager.rs
iron-coder-boards/Adafruit/Feather_RP2040/examples/blinky/src/: main.rs  test.rs
iron-coder-boards/Adafruit/Feather_RP2040/template/: Cargo.toml  README.md
iron-coder-boards/Adafruit/Feather_RP2040/template/.cargo/: config
iron-coder-boards/Adafruit/Feather_RP2040/template/src/: main.rs
iron-coder-boards/Adafruit/Feather_nRF52832/: feather_nRF52832.toml
iron-coder-boards/Adafruit/Feather_nRF52832/bsp/: Cargo.toml
iron-coder-boards/Adafruit/Feather_nRF52832/bsp/src/: lib.rs
iron-coder-boards/Adafruit/Feather_nRF52832/template/: Cargo.toml
iron-coder-boards/Adafruit/Feather_nRF52832/template/.cargo/: config
iron-coder-boards/Adafruit/Feather_nRF52832/template/src/: main.rs
iron-coder-boards/Adafruit/PiTTF_32_cap_touch/: pitft32-cap-touch.toml
iron-coder-boards/Adafruit/PiTTF_32_cap_touch/bsp/: Cargo.toml
iron-coder-boards/Adafruit/PiTTF_32_cap_touch/bsp/src/: lib.rs
iron-coder-boards/Sparkfun/MicroMod-ESP32/: micromod_esp32.toml
iron-coder-boards/Sparkfun/MicroMod-ESP32/bsp/: Cargo.toml
iron-coder-boards/Sparkfun/MicroMod-ESP32/bsp/examples/blinky/: Cargo.toml
iron-coder-boards/Sparkfun/MicroMod-ESP32/bsp/examples/blinky/.github/workflows/: rust_ci.yml
iron-coder-boards/Sparkfun/MicroMod-ESP32/bsp/examples/blinky/src/: main.rs
iron-coder-boards/Sparkfun/MicroMod-ESP32/bsp/src/: lib.rs
iron-coder-boards/Sparkfun/MicroMod-ESP32/template/: Cargo.toml
iron-coder-boards/Sparkfun/MicroMod-ESP32/template/.cargo/: config
iron-coder-boards/Sparkfun/MicroMod-RP2040/: micromod_rp2040.toml
iron-coder-boards/Sparkfun/MicroMod-RP2040/template/: Cargo.toml
iron-coder-boards/Sparkfun/MicroMod-RP2040/template/src/: main.rs
mindmap/: code editor.md  egui integrations.md  spec viewer.md
mindmap/Excalidraw/: Drawing 2023-07-09 11.56.15.excalidraw.md  inspirations.md
projects/test1/: .ironcoder.toml
src/: app.rs  board.rs  colorscheme.rs  editor.rs  icons.rs  lib.rs  main.rs  project.rs
src/app/: code_editor.rs  colorscheme.rs  icons.rs  mod.rs  test.rs
src/board/: display.rs  interface.rs  mod.rs  parsing.rs  pinout.rs  svg_reader.rs  test.rs
src/project/: code_generation.rs  display.rs  egui_helpers.rs  mod.rs  node_graph.rs  system.rs  test.rs
templates/basic/: Cargo.toml
templates/basic/src/: main.rs
