[package]
name = "iron_coder"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
log = "0.4.19"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui_extras = { version = "0.21.0", features = ["image"] }
image = { version = "0.24.6", features = ["jpeg", "png", "gif"] }
toml = "0.7.4"
syntect = "5.0.0"
rfd = "0.11.4"
