[package]
name = "iron_coder"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.22.0", features = ["serde"] }
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
log = "0.4.19"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui_extras = { version = "0.22.0", features = ["image"] }
image = { version = "0.24.6", features = ["jpeg", "png", "gif"] }
toml = "0.7.4"
syntect = "5.0.0"
rfd = "0.11.4"
fs_extra = "1.3.0"
duct = "0.13.6"
enum-iterator = "1.4.1"
ra_ap_rust-analyzer = "0.0.160"
ra_ap_ide = "0.0.160"
syn = { version = "2.0.25", features = ["full", "extra-traits", "parsing", "visit"] }
quote = "1.0.29"
proc-macro2 = "1.0.64"
prettyplease = "0.2.10"
slotmap = "1.0.6"
clap = { version = "4.3.19", features = ["derive"] }
usvg = "0.35.0"
generate = "1.5.0"
cargo-generate = "0.19.0"
iron-coder-feather-rp2040-bsp = { version = "0.1.0", path = "iron-coder-boards/Adafruit/Feather_RP2040/bsp" }
savefile-derive = "0.16.4"
k_board = "1.2.2"
git2 = "0.13.17"
