[package]
name = "feather-nRF52832-blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt              = "0.2.0"
rtt-target              = { version = "0.3.1", features = ["cortex-m"] }
cortex-m-rt             = "0.7.3"
nb                      = "1.0.0"
cortex-m                = "0.7.7"
embedded-hal            = "1.0.0"
nrf52832-hal            = "0.16.0"
nrf52832-pac            = "0.12.2"
usbd-serial             = "0.2.0"
usb-device              = "0.3.1"
critical-section        = "1.1.2"
