[package]
name = "iron-coder-pitft-32-cap-touch-bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-hal = { version = "0.2.7" }
embedded-hal-one = { package = "embedded-hal", version = "^1.0.0-alpha.9" }
ft6236 = "0.0.3"
ili9341 = "0.5.0"

