[package]
name = "feather-rp2040-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
embedded-time = "0.12.0"
embedded-hal = "0.2.5"
adafruit-feather-rp2040 = "0.1.0"
